<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.studeo.playgroung.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.studeo.playgroung.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.studeo.playgroung.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_challenge"
        android:name="com.studeo.playgroung.ui.challenge"
        android:label="@string/title_dailychallenge"
        tools:layout="@layout/fragment_challenge" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.studeo.playgroung.ui.chat"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>